--- a/blog-detail.html
+++ b/blog-detail.html
@@ -33,8 +33,7 @@ https://templatemo.com/tm-538-digital-trend
     <nav class="navbar navbar-expand-lg position-relative">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-              <i class="fa fa-line-chart"></i>
-              Digital Trend
+              <u>Welcome</u>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -45,13 +44,13 @@ https://templatemo.com/tm-538-digital-trend
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="index.html#about" class="nav-link">Studio</a>
+                        <a href="index.html#about" class="nav-link">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html#project" class="nav-link">Our Works</a>
+                        <a href="index.html#project" class="nav-link">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="blog.html" class="nav-link">Blog</a>
+                        <a href="blog.html" class="nav-link">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link contact">Contact</a>
