--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,9 @@ https://templatemo.com/tm-538-digital-trend
 
                     <div class="col-lg-6 mx-auto col-md-7 col-12 py-5 mt-5 text-center" data-aos="fade-up">
 
-                      <h1 class="mb-4">Hey there, Let's <strong>talk</strong> about <strong>creative</strong> projects</h1>
+                      <h1 class="mb-4">Hey there, Let's <strong>talk</strong> about my <strong>projects</strong> and <strong>resume</strong></h1>
 
                       <p>or email me at <a href="mailto:emilysharkey1@gmail.com">emilysharkey1@gmail.com</a></p>
-                      <p>Please follow our <a rel="nofollow" href="https://templatemo.com/contact">contact page</a> to <strong>setup</strong> the contact form.</p>
                     </div>
 
                     <div class="col-lg-8 mx-auto col-md-10 col-12">
@@ -131,10 +130,9 @@ https://templatemo.com/tm-538-digital-trend
 
           <div class="col-lg-3 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
             <ul class="social-icon">
-              <li><a href="#" class="fa fa-instagram"></a></li>
-              <li><a href="#" class="fa fa-twitter"></a></li>
-              <li><a href="#" class="fa fa-linkedin"></a></li>
-              <li><a href="#" class="fa fa-github"></a></li>
+              <li><a href="https://twitter.com/emily_sharkey_" class="fa fa-twitter"></a></li>
+              <li><a href="https://www.linkedin.com/in/emily-sharkey-36953a207" class="fa fa-linkedin"></a></li>
+              <li><a href="https://github.com/emilysharkey" class="fa fa-github"></a></li>
             </ul>
           </div>
 
