--- a/project-detail.html
+++ b/project-detail.html
@@ -151,10 +151,9 @@ https://templatemo.com/tm-538-digital-trend
 
           <div class="col-lg-3 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
             <ul class="social-icon">
-              <li><a href="#" class="fa fa-instagram"></a></li>
-              <li><a href="#" class="fa fa-twitter"></a></li>
-              <li><a href="#" class="fa fa-linkedin"></a></li>
-              <li><a href="#" class="fa fa-github"></a></li>
+              <li><a href="https://twitter.com/emily_sharkey_" class="fa fa-twitter"></a></li>
+              <li><a href="https://www.linkedin.com/in/emily-sharkey-36953a207" class="fa fa-linkedin"></a></li>
+              <li><a href="https://github.com/emilysharkey" class="fa fa-github"></a></li>
             </ul>
           </div>
 
