--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                               <div class="hero-text">
 
-                                <b><font size = 48> <class="text-white"> <data-aos="fade-up">Hi, I'm </font></b>
-                                <b><font size = 48> <class="text-white"> <data-aos="fade-up">Emily Sharkey</font></b>
+                                <h1>Hi, I'm </h1>
+                                <h1>Emily Sharkey</h1>
 
                                    <a href="" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">BBA Business Analytics and Business Management  </a>
 
@@ -115,9 +115,10 @@ https://templatemo.com/tm-538-digital-trend
 
                </div>
           </div>
+     </section>
           <br>
        <!-- CLASSES -->
-       <section class="about section-padding pb-0" id="about">
+       <section class="about section-padding pb-0">
           <div class="container">
                <div class="row">
 
@@ -143,7 +144,7 @@ https://templatemo.com/tm-538-digital-trend
                </div>
           </div>
      <!-- SCHEDULE -->
-       <section class="about section-padding pb-0" id="about">
+       <section class="about section-padding pb-0">
           <div class="container">
                <div class="row">
 
@@ -167,7 +168,12 @@ https://templatemo.com/tm-538-digital-trend
                                    <tr> <td> Available</td> <td>5-7:45pm: Class</td> <td>Available</td> <td>Available</td> <td>Available</td></tr>
                                    <tr> <td> Available</td> <td>Available</td> <td>Available</td> <td>Available</td> <td>Available</td></tr>
                                </table>
+                         </div>
+                         </div>
+                         </div>
+          </div>
                         </section>
+       </section>
                    
                     <br>
 
@@ -276,7 +282,7 @@ https://templatemo.com/tm-538-digital-trend
         <div class="row">
 
           <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
-            <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">Questions?</h1>
+            <h1 class="text-white">Questions?</h1>
           </div>
 
           <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
