--- a/project-detail.html
+++ b/project-detail.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-538-digital-trend
 
                     <div class="col-lg-9 mx-auto col-md-10 col-12 mt-lg-5 text-center" data-aos="fade-up">
 
-                      <h4><u>Business Analytics and Information Systems Capstone Final Project</h4></u>
+                      <h4>Business Analytics and Information Systems Capstone Final Project</h4>
 
                      <h1><a href="https://www.find211.org">Find211.org</a></h1>
                       
@@ -83,7 +83,7 @@ https://templatemo.com/tm-538-digital-trend
        <img src="C:/Users/emily/OneDrive/Pictures/map.jpg" class="img-fluid" alt="find211map" width="700">
      </div>
 
-     <!-- PROJECT DETAIL -->
+     <!-- PROJECT DETAIL Find 211 -->
      <section class="project-detail section-padding">
           <div class="container">
                <div class="row">
@@ -130,7 +130,7 @@ https://templatemo.com/tm-538-digital-trend
         <div class="row">
 
           <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
-            <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">We make creative <strong>brands</strong> only.</h1>
+            <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">Questions?</h1>
           </div>
 
           <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
