--- a/blog.html
+++ b/blog.html
@@ -70,12 +70,12 @@ https://templatemo.com/tm-538-digital-trend
 
                       <h1 class="mb-4" data-aos="fade-up">Offical Resume 2023</h1>
                     </div>
-                    <img src="C:/Users/emily/OneDrive/Pictures/resume.jpg" alt="Resume" width = "600" class="center">
+                    <img src="images/resume.jpg" alt="Resume" width = "600" class="center">
                   
 
                     <div class="col-lg-5 col-md-5 col-12 mb-4">
                       <div class="blog-sidebar d-flex justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
-                        <img src="C:/Users/emily/OneDrive/Pictures/wib.jpg" class="img-fluid" alt="blog">
+                        <img src="images/wib.jpg" class="img-fluid" alt="blog">
 
                         <div class="blog-info">
                           <h4 class="blog-category text-danger">Women In Business</h4>
@@ -87,7 +87,7 @@ https://templatemo.com/tm-538-digital-trend
                       </div>
 
                       <div class="blog-sidebar py-4 d-flex justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
-                        <img src="C:/Users/emily/OneDrive/Pictures/habitat.jpg" class="img-fluid" alt="blog">
+                        <img src="images/habitat.jpg" class="img-fluid" alt="blog">
 
                         <div class="blog-info">
                           <h4 class="blog-category text-success">Habitat for Humanity</h4>
