--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="col-lg-6 col-12">
                           <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
 
-                            <img src="C:/Users/emily/OneDrive/Pictures/selfpicture.jpg" class="img-fluid" alt="Pictureofme" width="400">
+                            <img src="images/selfpicture.jpg" class="img-fluid" alt="Pictureofme" width="400">
                           </div>
                         </div>
 
@@ -109,7 +109,7 @@ https://templatemo.com/tm-538-digital-trend
 
                          <div class="about-image" data-aos="fade-up" data-aos-delay="200">
 
-                          <img src="C:/Users/emily/OneDrive/Pictures/friends.jpg" alt="Picture with friends" width ="300" class="img-fluid">
+                          <img src="images/friends.jpg" alt="Picture with friends" width ="300" class="img-fluid">
                         </div>
                     </div>
 
@@ -192,7 +192,7 @@ https://templatemo.com/tm-538-digital-trend
 
                          <div class="owl-carousel owl-theme" id="project-slide">
                               <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="200">
-                                   <img src="C:/Users/emily/OneDrive/Pictures/find211.jpg" class="img-fluid" alt="find 211 project image">
+                                   <img src="images/find211.jpg" class="img-fluid" alt="find 211 project image">
 
                                    <div class="project-info">
                                         <small>Website</small>
