--- a/project-detail.html
+++ b/project-detail.html
@@ -80,7 +80,7 @@ https://templatemo.com/tm-538-digital-trend
      </section>
 
      <div class="full-image text-center">
-       <img src="C:/Users/emily/OneDrive/Pictures/map.jpg" class="img-fluid" alt="find211map" width="700">
+       <img src="images/map.jpg" class="img-fluid" alt="find211map" width="700">
      </div>
 
      <!-- PROJECT DETAIL Find 211 -->
@@ -90,7 +90,7 @@ https://templatemo.com/tm-538-digital-trend
 
                   <div class="col-lg-6 col-md-6 col-12 mb-5">
 
-                      <img src="C:/Users/emily/OneDrive/Pictures/find211iowa.jpg" class="img-fluid" alt="find211iowa" data-aos="fade-up">
+                      <img src="images/find211iowa.jpg" class="img-fluid" alt="find211iowa" data-aos="fade-up">
                     </div>
 
                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
@@ -115,7 +115,7 @@ https://templatemo.com/tm-538-digital-trend
                   <h3>Curabitur egestas mollis tellus sit amet porttitor. Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus elementum, tempor risus vel.</h3>
 
                     <div class="about-image" data-aos="fade-up" data-aos-delay="200">
-                      <img src="C:/Users/emily/OneDrive/Pictures/qrshirtpic.jpg" class="img-fluid" alt="group pic" width="900">
+                      <img src="images/qrshirtpic.jpg" class="img-fluid" alt="group pic" width="900">
 
                       <p>Group Members: Emily Sharkey, Alex McDonald, Jack Pawlowski, Jack Mossbarger, Rory Gordon, Karsen Noble, David Counsell, and Bryce Barnett</p>
                     </div>
