--- a/project-detail.html
+++ b/project-detail.html
@@ -103,15 +103,13 @@ https://templatemo.com/tm-538-digital-trend
 
                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
 
-                      <h2>Pellentesque pretium interdum</h2>
-
-                      <p class="mt-3 mb-4">Nunc sapien nulla, interdum at diam non, aliquam vestibulum leo. Fusce laoreet malesuada ante, consectetur consequat.</p>
+                      <h2>Find 211 Project Accomplishments</h2>
 
                       <ul class="list-detail">
-                        <li><span>Curabitur commodo a sapien non</span></li>
-                        <li><span>Sed facilisis convallis turpis</span></li>
-                        <li><span>Quisque placerat augue neque</span></li>
-                        <li><span>Nullam fringilla arcu a tortor</span></li>
+                        <li><span>Completed 17 remaining states to the US map</span></li>
+                        <li><span>Created marketing materials such as posters and QR codes to promote Find 211 services</span></li>
+                        <li><span>Created 8 question survey from users to recieve feedback about Find211 website</span></li>
+                        <li><span>Analyzed user feedback and presented through graphical representations </span></li>
                       </ul>
                     </div>
                </div>
@@ -120,7 +118,8 @@ https://templatemo.com/tm-538-digital-trend
 
               <div class="col-lg-9 mx-auto col-12" data-aos="fade-up">
                 <div class="client-info mt-lg-5 py-lg-5">
-                  <h3>Curabitur egestas mollis tellus sit amet porttitor. Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus elementum, tempor risus vel.</h3>
+                  <h5>"Find 211 is a three-digit phone number used for non-emergency health and human services informationn and referral to local resources (i.e., food assistance programs
+                    housing assistance, employement support, legal help). This site is intended to help indviduals and families find services and resources within their community that inprove their overall health and well-being".</h5>
 
                     <div class="about-image" data-aos="fade-up" data-aos-delay="200">
                       <img src="images/qrshirtpic.jpg" class="img-fluid" alt="group pic" width="900">
