--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ https://templatemo.com/tm-538-digital-trend
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image02.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/airbnb.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
                                         <small>Website</small>
