--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ https://templatemo.com/tm-538-digital-trend
                                    <img src="images/find211.jpg" class="img-fluid" alt="find 211 project image">
 
                                    <div class="project-info">
-                                        <small>Website</small>
+                                        <small>BAIS Capstone</small>
                                         
                                         <h3>
                                              <a href="project-detail.html">
@@ -220,56 +220,11 @@ https://templatemo.com/tm-538-digital-trend
                                    <img src="images/airbnb.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Website</small>
+                                        <small>Data Wrangling</small>
 
                                         <h3>
                                              <a href="project-detail.html">
-                                                  <span>Smart Ladies</span>
-                                                  <i class="fa fa-angle-right project-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
-
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image03.jpg" class="img-fluid" alt="project image">
-
-                                   <div class="project-info">
-                                        <small>Branding</small>
-
-                                        <h3>
-                                             <a href="project-detail.html">
-                                                  <span>Shoes factory</span>
-                                                  <i class="fa fa-angle-right project-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
-
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image04.jpg" class="img-fluid" alt="project image">
-
-                                   <div class="project-info">
-                                        <small>Social Media</small>
-
-                                        <h3>
-                                             <a href="project-detail.html">
-                                                  <span>Race Bicycle</span>
-                                                  <i class="fa fa-angle-right project-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
-
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
-
-                                   <div class="project-info">
-                                        <small>Video</small>
-
-                                        <h3>
-                                             <a href="project-detail.html">
-                                                  <span>Ultimate HealthCare</span>
+                                                  <span>Airbnb's New York City/Local Attraction Sites</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
