--- a/project-detail.html
+++ b/project-detail.html
@@ -131,6 +131,68 @@ https://templatemo.com/tm-538-digital-trend
           </div>
      </section>
 
+         <!-- PROJECT DETAIL -->
+         <section class="project-detail section-padding-half">
+          <div class="container">
+               <div class="row">
+
+                    <div class="col-lg-9 mx-auto col-md-10 col-12 mt-lg-5 text-center" data-aos="fade-up">
+
+                      <h4>Data Wrangling Final Project</h4>
+
+                     <h1><a href="https://www.find211.org">Find211.org</a></h1>
+                      
+                    </div>
+
+               </div>
+          </div>
+     </section>
+
+     <div class="full-image text-center">
+       <img src="images/map.jpg" class="img-fluid" alt="find211map" width="700">
+     </div>
+
+     <!-- PROJECT DETAIL Airbnb -->
+     <section class="project-detail section-padding">
+          <div class="container">
+               <div class="row">
+
+                  <div class="col-lg-6 col-md-6 col-12 mb-5">
+
+                      <img src="images/find211iowa.jpg" class="img-fluid" alt="find211iowa" data-aos="fade-up">
+                    </div>
+
+                    <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
+
+                      <h2>Find 211 Project Accomplishments</h2>
+
+                      <ul class="list-detail">
+                        <li><span>Completed 17 remaining states to the US map</span></li>
+                        <li><span>Created marketing materials such as posters and QR codes to promote Find 211 services</span></li>
+                        <li><span>Created 8 question survey from users to recieve feedback about Find211 website</span></li>
+                        <li><span>Analyzed user feedback and presented through graphical representations </span></li>
+                      </ul>
+                    </div>
+               </div>
+
+            
+
+              <div class="col-lg-9 mx-auto col-12" data-aos="fade-up">
+                <div class="client-info mt-lg-5 py-lg-5">
+                  <h5>"Find 211 is a three-digit phone number used for non-emergency health and human services informationn and referral to local resources (i.e., food assistance programs
+                    housing assistance, employement support, legal help). This site is intended to help indviduals and families find services and resources within their community that inprove their overall health and well-being".</h5>
+
+                    <div class="about-image" data-aos="fade-up" data-aos-delay="200">
+                      <img src="images/qrshirtpic.jpg" class="img-fluid" alt="group pic" width="900">
+
+                      <p>Group Members: Emily Sharkey, Alex McDonald, Jack Pawlowski, Jack Mossbarger, Rory Gordon, Karsen Noble, David Counsell, and Bryce Barnett</p>
+                    </div>
+                </div>
+              </div>
+          </div>
+     </section>
+
+
 
     <footer class="site-footer">
       <div class="container">
