--- a/project-detail.html
+++ b/project-detail.html
@@ -140,7 +140,12 @@ https://templatemo.com/tm-538-digital-trend
 
                       <h4>Data Wrangling Final Project</h4>
 
-                     <h1><a href="https://www.find211.org">Find211.org</a></h1>
+                     <h1>New York City Airbnb Locations and Local Attractions</a></h1>
+
+                     <h4>Airbnb vacation rental company has presented itself as a valuable resource to travelers that are looking for better experiences, cheaper alternatives, and better locations compared to staying at an average hotel. According to The Zebra Research Center, 60% of Airbnb’s user base are millennials, with over 5.6 million active listings worldwide. Airbnbs vacation rentals attract customers from all over the world to visit new locations and attraction sites. Location of Airbnbs are a major influence on customers when finding the right Airbnb listing for them.</h4>
+
+                    <h4>In this project, we utilized data on Airbnb locations in New York City from Kaggle.com and examined the most popular Airbnb locations in New York City and the price of each listing based on the distance to local attraction sites in New York City.</h4>
+                      
                       
                     </div>
 
@@ -149,8 +154,10 @@ https://templatemo.com/tm-538-digital-trend
      </section>
 
      <div class="full-image text-center">
-       <img src="images/map.jpg" class="img-fluid" alt="find211map" width="700">
+       <img src="images/ny1.jpg" class="img-fluid" alt="newyork" width="700">
      </div>
+     <div class="col-lg-9 mx-auto col-md-10 col-12 mt-lg-5 text-center" data-aos="fade-up">
+     <h4>The summary table and bar chart indicates that Astoria and Greenpoint have the highest priced Airbnb listings in all of NYC neighborhoods. However, the Astoria Airbnb has a minimum night of 100, and the Greenpoint Airbnb has a minimum of 5 nights. Any price comparison of neighborhoods is likely to suffer from the effect of minimum nights. Thus, no conclusions about differences in Airbnb price by neighborhood can be drawn from this initial exploration of the data. Furthermore, because the neighborhood prices collected from Kaggle are impacted by minimum nights, analysis of the relationship between the Airbnb neighborhood and price is likely to be biased or inaccurate for Airbnbs with different minimum nights. </h4>
 
      <!-- PROJECT DETAIL Airbnb -->
      <section class="project-detail section-padding">
@@ -159,19 +166,12 @@ https://templatemo.com/tm-538-digital-trend
 
                   <div class="col-lg-6 col-md-6 col-12 mb-5">
 
-                      <img src="images/find211iowa.jpg" class="img-fluid" alt="find211iowa" data-aos="fade-up">
+                      <img src="images/ny2.jpg" class="img-fluid" alt="newyork2" data-aos="fade-up">
                     </div>
 
                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
 
-                      <h2>Find 211 Project Accomplishments</h2>
-
-                      <ul class="list-detail">
-                        <li><span>Completed 17 remaining states to the US map</span></li>
-                        <li><span>Created marketing materials such as posters and QR codes to promote Find 211 services</span></li>
-                        <li><span>Created 8 question survey from users to recieve feedback about Find211 website</span></li>
-                        <li><span>Analyzed user feedback and presented through graphical representations </span></li>
-                      </ul>
+                      <img src="images/ny3.jpg" class="img-fluid" alt="newyork2" data-aos="fade-up"> 
                     </div>
                </div>
 
@@ -179,13 +179,7 @@ https://templatemo.com/tm-538-digital-trend
 
               <div class="col-lg-9 mx-auto col-12" data-aos="fade-up">
                 <div class="client-info mt-lg-5 py-lg-5">
-                  <h5>"Find 211 is a three-digit phone number used for non-emergency health and human services informationn and referral to local resources (i.e., food assistance programs
-                    housing assistance, employement support, legal help). This site is intended to help indviduals and families find services and resources within their community that inprove their overall health and well-being".</h5>
-
-                    <div class="about-image" data-aos="fade-up" data-aos-delay="200">
-                      <img src="images/qrshirtpic.jpg" class="img-fluid" alt="group pic" width="900">
-
-                      <p>Group Members: Emily Sharkey, Alex McDonald, Jack Pawlowski, Jack Mossbarger, Rory Gordon, Karsen Noble, David Counsell, and Bryce Barnett</p>
+                  <h5>Shown in Figure 3 are the neighborhoods of Manhattan. The large, open rectangle in the middle of this map is Central Park. All of the closest Airbnbs are in the Upper East Side and Upper West Side neighborhoods. These neighborhoods are represented by the two pink shaded areas to the left and right of Central Park.</h5>
                     </div>
                 </div>
               </div>
