--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ https://templatemo.com/tm-538-digital-trend
                     <div class="col-lg-12 col-12">
 
                         <h2 class="mb-5 text-center" data-aos="fade-up">
-                            Completed Course Projects 
+                            Senior Year Completed Course Projects 
      
                         </h2>
 
