--- a/blog.html
+++ b/blog.html
@@ -78,11 +78,12 @@ https://templatemo.com/tm-538-digital-trend
                     <div class="col-lg-12 col-12 py-5 mt-5 mb-3 text-center">
 
                       <h1 class="mb-4" data-aos="fade-up">Offical Resume 2023</h1>
+                      <h4><a href ="/Emily Sharkey Resume.pdf">Click to download</a></h4>
                     </div>
                     <img src="images/resume.jpg" alt="Resume" width = "600" class="center">
-                  
 
                     <div class="col-lg-5 col-md-5 col-12 mb-4">
+                       
                       <div class="blog-sidebar d-flex justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
                         <img src="images/wib.jpg" class="img-fluid" alt="blog">
 
