--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@ https://templatemo.com/tm-538-digital-trend
             </ul>
           </div>
 
+          <a href="/cookies-popup.html">Cookie Policy</a>
         </div>
       </div>
     </footer>
