--- a/blog-detail.html
+++ b/blog-detail.html
@@ -216,6 +216,7 @@ https://templatemo.com/tm-538-digital-trend
               <li><a href="#" class="fa fa-behance"></a></li>
             </ul>
           </div>
+          <p> &copy; All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="cookies-popup.html">Cookie Policy</a></p>
 
         </div>
       </div>
