--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ https://templatemo.com/tm-538-digital-trend
             </ul>
           </div>
 
-          <p> &copy; All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="cookies-popup.html">Cookie Policy</a></p>
+          <p> &copy; All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="cookies-popup.html">Cookie Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
         </div>
       </div>
     </footer>
