--- a/blog.html
+++ b/blog.html
@@ -133,7 +133,7 @@ https://templatemo.com/tm-538-digital-trend
               <li><a href="https://github.com/emilysharkey" class="fa fa-github"></a></li>
             </ul>
           </div>
-          <p> &copy; All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="cookies-popup.html">Cookie Policy</a></p>
+          <p> &copy; All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="cookies-popup.html">Cookie Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
         </div>
       </div>
     </footer>
