--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-538-digital-trend
                     <div class="col-lg-12 col-12 py-5 mt-5 mb-3 text-center">
 
                       <h1 class="mb-4" data-aos="fade-up">Offical Resume 2023</h1>
-                      <h4><a href ="/Emily Sharkey Resume.pdf">Click to download</a></h4>
+                      <h4><a href="Emily_Sharkey_Resume.pdf">Click to download</a></h4>
                     </div>
                     <img src="images/resume.jpg" alt="Resume" width = "600" class="center">
 
