--- a/cookies-popup.html
+++ b/cookies-popup.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
-
+    
 <head>
     <title>Cookie Policy</title>
 </head>
+
 
 <body>
     <h1>Cookie Policy</h1>
@@ -11,3 +13,4 @@
 </body>
 
 </html>
+
